--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
@@ -16,17 +16,29 @@
 
 <body>
 
- <!-- navigation code here -->
+<header class="container header">
+  <h1>SpaceWalkers</h1>
+
+<nav>
+    <a>Home</a>
+    <a>About Us</a>
+    <a>Blog</a>
+    <a>Contact</a>
+    <a>Sign In</a>
+  </nav> 
+</header>
 
   <div class="container home">
 
-    <header class="intro">
-       <!-- image code here -->
+    <section class="intro">
+      <div>
+        <img class="main-img" src="img/main-header.png" alt="Space">
+      </div> 
 
       <h2>Lift Off</h2>
     
       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-    </header>
+    </section>
 
     <section class="space-images">
         <img src="img/blast.png" class="blast" alt="Rocket blasting off">
